--- a/WindowsFormsApp1/Minesweeper 2.0.csproj
+++ b/WindowsFormsApp1/Minesweeper 2.0.csproj
@@ -48,6 +48,7 @@
   <ItemGroup>
     <Compile Include="Bomb.cs" />
     <Compile Include="Box.cs" />
+    <Compile Include="Flag.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
